objects/APTS_Delete_Sequence__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Specify the sequence in which the data needs to be deleted from the objects</description>
    <fields>
        <fullName>APTS_Batch_Size__c</fullName>
        <description>Batch Size of the records</description>
        <label>Batch Size</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Object_API__c</fullName>
        <description>The Object API Name</description>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence_No__c</fullName>
        <description>The Sequence Number in which the data needs to be deleted</description>
        <label>Sequence No</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Where_Clause__c</fullName>
        <description>Where clause for the object to be added in query</description>
        <label>Where Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apttus Records Delete Sequence</label>
</CustomObject>